[package]
name = "chaintrack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chaintrack"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
